# colors.py

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  testing.py
colors/: __init__.py  base.py  primary.py  rainbow.py  w3c.py
tests/: test_arithmetic.py  test_blend_modes.py  test_colors.py  test_palette.py
